package com.mcnz.mm;

public enum AssetClass {

	EQUITY, CASH, BOND, CRYPTO;
	
}
