package com.mcnz.mm;

public class Holding {
	
	Asset asset;
	int quantity;
	
	public Holding(Asset asset, int quantity) {
		this.asset = asset;
		this.quantity = quantity;
	}

}
